--- a/archive.html
+++ b/archive.html
@@ -8,5 +8,6 @@ group: navigation
 
 {% assign posts_collate = site.posts %}
 <div class="page card">
+  <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0src="//music.163.com/outchain/player?type=2&id=29805433&auto=1&height=0"></iframe>
 {% include JB/posts_collate %}
 </div>
